添加sm4 xts模式测试代码

--- a/test_alg/ciphers/sm4/CMakeLists.txt
+++ b/test_alg/ciphers/sm4/CMakeLists.txt
@@ -5,3 +5,8 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(test_xts_sm4
         xts_sm4.c)
+
+
+target_link_libraries(test_xts_sm4
+        ${OPENSSL_ROOT_DIR}/libcrypto.a
+        ${OPENSSL_ROOT_DIR}/libssl.a)
