add gcm sm4 sample

--- a/test_alg/ciphers/sm4/CMakeLists.txt
+++ b/test_alg/ciphers/sm4/CMakeLists.txt
@@ -1,12 +1,19 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(test_xts_sm4 C)
+project(test_cipher_sm4 C)
 set(CMAKE_C_STANDARD 11)
 
+# xts mode
 add_executable(test_xts_sm4
         xts_sm4.c)
-
-
 target_link_libraries(test_xts_sm4
+        ${OPENSSL_ROOT_DIR}/libcrypto.a
+        ${OPENSSL_ROOT_DIR}/libssl.a)
+
+
+# gcm mode
+add_executable(test_gcm_sm4
+        gcm_sm4.c)
+target_link_libraries(test_gcm_sm4
         ${OPENSSL_ROOT_DIR}/libcrypto.a
         ${OPENSSL_ROOT_DIR}/libssl.a)
