--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ add_executable(DebugOpenSSL main.c)
 add_subdirectory(test_alg/asymciphers)
 add_subdirectory(test_alg/ciphers)
 add_subdirectory(test_alg/macs)
+add_subdirectory(test_alg/signatures)
