--- a/test_alg/asymciphers/CMakeLists.txt
+++ b/test_alg/asymciphers/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_ROOT_DIR}/build/asymciphers)
 
+add_subdirectory(ecies)
 add_subdirectory(rsa)
 add_subdirectory(sm2)
